# ArchitecturyIS

./: Dockerfile  README.md  macket.py  main.py  udpClient.py
layout/: macket.py  udpServer.py
recognition/: Dockerfile
shared/: CMakeLists.txt  Client.py
shared/Client/: CMakeLists.txt
shared/Client/src/: generator.cpp  generator.h  main.cpp
shared/Common/: generatorEntity.h  socketExchanger.cpp  socketExchanger.h
shared/Server/: CMakeLists.txt
shared/Server/src/: camera.cpp  camera.h  event.cpp  event.h  generator.cpp  generator.h  main.cpp  system.cpp  system.h
shared/client/: cl  client.cpp
shared/server/: CMakeLists.txt  cross-build.sh
shared/server/client/src/: client.cpp
shared/server/src/: server.cpp
source/puCode/: cameraPreccedent.pu  classDiagram.pu  conceptual.pu  controlSystemPreccedent.pu  preccedent.pu  stateDiagram.pu
